更新在线例子

--- a/public/doc/公共接口/公共接口1.md
+++ b/public/doc/公共接口/公共接口1.md
@@ -8,9 +8,42 @@
 [这是一个链接](https://github.com/thisisonepz/node-docute)
 
 ### 这个是3级标题
+
 看效果咯~
--
--
+
+```$xslt
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+```
 -
 -
 -
@@ -19,7 +52,74 @@
 -
 
 ### 这个是3级标题另外一个
+```
 
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+```
 1.
 2.
 3.
